gui/4.2/graphstudio/explore-graph/graph-exploration-panel.md
![TigerGraph Logo](https://www.tigergraph.com/wp-content/uploads/2020/05/TG_LOGO.svg) [Docs](https://docs.tigergraph.com/home)
Page 1[Prev](https://docs.tigergraph.com/gui/4.2/graphstudio/explore-graph/graph-exploration-panel)[Next](https://docs.tigergraph.com/gui/4.2/graphstudio/explore-graph/graph-exploration-panel)
Search by [Algolia](https://www.algolia.com/docsearch)
[Products](https://docs.tigergraph.com/gui/4.2/graphstudio/explore-graph/graph-exploration-panel)
TigerGraph Savanna
[TigerGraph Savanna](https://docs.tigergraph.com/savanna/main/overview/) [(_TigerGraph Cloud Classic_)](https://docs.tigergraph.com/cloud/main/start/overview)
TigerGraph Server
[TigerGraph DB](https://docs.tigergraph.com/tigergraph-server/4.2/intro/)
TigerGraph Suite
[GraphStudio and Admin Portal](https://docs.tigergraph.com/gui/4.2/intro/) [Insights](https://docs.tigergraph.com/insights/4.2/intro/) [GSQL Web Shell](https://docs.tigergraph.com/tigergraph-server/current/gsql-shell/web)
Query Languages
[GSQL Language Reference](https://docs.tigergraph.com/gsql-ref/4.2/intro/) [GSQL Web Shell](https://docs.tigergraph.com/tigergraph-server/current/gsql-shell/web) [OpenCypher](https://docs.tigergraph.com/gsql-ref/current/opencypher-in-gsql)
AI & Graph Intelligence
[Graph Data Science Library](https://docs.tigergraph.com/graph-ml/3.10/intro/) [Hybrid Graph+Vector Search](https://docs.tigergraph.com/gsql-ref/current/vector/)
Connectors and APIs
[Data Connectors](https://docs.tigergraph.com/tigergraph-server/current/data-loading) [pyTigerGraph](https://docs.tigergraph.com/pytigergraph/1.8/intro/) [TigerGraph GraphQL Service](https://docs.tigergraph.com/graphql/3.9/) [JDBC Driver](https://github.com/tigergraph/ecosys/tree/master/tools/etl/tg-jdbc-driver)
Legacy Documentation
[ Legacy Documentation ](https://docs-legacy.tigergraph.com)
[Resources](https://docs.tigergraph.com/gui/4.2/graphstudio/explore-graph/graph-exploration-panel)
[Developer Site](https://dev.tigergraph.com/) [Community Forum](https://community.tigergraph.com/) [Knowledge Base](https://tigergraph.freshdesk.com/support/solutions)
[Download](https://dl.tigergraph.com)
[ TG Savanna](https://savanna.tgcloud.io)
### [GraphStudio and Admin Portal](https://docs.tigergraph.com/gui/4.2/intro/)
  *     * [Overview](https://docs.tigergraph.com/gui/4.2/intro/)
  *     * GraphStudio
      * [Overview](https://docs.tigergraph.com/gui/4.2/graphstudio/overview)
      * [Authentication](https://docs.tigergraph.com/gui/4.2/graphstudio/user-access-management)
      * [Design Schema](https://docs.tigergraph.com/gui/4.2/graphstudio/design-schema)
      * [Load Data](https://docs.tigergraph.com/gui/4.2/graphstudio/load-data)
        * [Data Transformation](https://docs.tigergraph.com/gui/4.2/graphstudio/data-transformation)
      * [Explore Graph](https://docs.tigergraph.com/gui/4.2/graphstudio/explore-graph/README)
        * [Graph Exploration Panel](https://docs.tigergraph.com/gui/4.2/graphstudio/explore-graph/graph-exploration-panel)
        * [Search for Vertices](https://docs.tigergraph.com/gui/4.2/graphstudio/explore-graph/search-for-vertices)
        * [Expand from Vertices](https://docs.tigergraph.com/gui/4.2/graphstudio/explore-graph/expand-from-vertices)
        * [Find Paths between Vertices](https://docs.tigergraph.com/gui/4.2/graphstudio/explore-graph/find-paths-between-vertices)
        * [Run GSQL Queries](https://docs.tigergraph.com/gui/4.2/graphstudio/explore-graph/run-gsql-queries)
        * [Augment Visualization Result](https://docs.tigergraph.com/gui/4.2/graphstudio/explore-graph/augment-visualization-result)
        * [Query Status API](https://docs.tigergraph.com/gui/4.2/graphstudio/explore-graph/query-status-api)
      * Build Graph Patterns (Deprecated)
        * [Visual Query Builder](https://docs.tigergraph.com/gui/4.2/graphstudio/build-graph-patterns/visual-query-builder-overview)
        * [Visual Pattern Examples](https://docs.tigergraph.com/gui/4.2/graphstudio/build-graph-patterns/visual-pattern-examples)
      * [Write Queries](https://docs.tigergraph.com/gui/4.2/graphstudio/write-queries)
      * [Write openCypher Queries in TigerGraph](https://docs.tigergraph.com/gui/4.2/graphstudio/write-open-cypher-queries-in-tigergraph)
      * [Actions](https://docs.tigergraph.com/gui/4.2/graphstudio/actions)
      * [Migrate From Relational Database](https://docs.tigergraph.com/gui/4.2/graphstudio/migrate-from-relational-database)
      * [Export and Import Solution](https://docs.tigergraph.com/gui/4.2/graphstudio/export-and-import-solution)
      * [Keyboard Shortcuts](https://docs.tigergraph.com/gui/4.2/graphstudio/keyboard-shortcuts)
      * [Known Issues](https://docs.tigergraph.com/gui/4.2/graphstudio/known-issues)
      * [ZoomChart Update](https://docs.tigergraph.com/gui/4.2/graphstudio/graphstudio-zoomchart-update)
      * [GraphStudio Patent and Third Party Notice](https://docs.tigergraph.com/gui/4.2/graphstudio/patent-and-third-party-notice)
      * [License](https://docs.tigergraph.com/gui/4.2/graphstudio/license)
  *     * Admin Portal
      * [Overview](https://docs.tigergraph.com/gui/4.2/admin-portal/overview)
      * [Dashboard](https://docs.tigergraph.com/gui/4.2/admin-portal/dashboard)
      * [Monitor](https://docs.tigergraph.com/gui/4.2/admin-portal/monitoring/README)
        * [Queries](https://docs.tigergraph.com/gui/4.2/admin-portal/monitoring/queries)
        * [Logs](https://docs.tigergraph.com/gui/4.2/admin-portal/monitoring/log-viewer)
      * [Management](https://docs.tigergraph.com/gui/4.2/admin-portal/management/README)
        * [License](https://docs.tigergraph.com/gui/4.2/admin-portal/management/license)
        * [User Management](https://docs.tigergraph.com/gui/4.2/admin-portal/management/user-management)
        * [Components](https://docs.tigergraph.com/gui/4.2/admin-portal/components/README)
          * [GPE](https://docs.tigergraph.com/gui/4.2/admin-portal/components/gpe)
          * [GSQL](https://docs.tigergraph.com/gui/4.2/admin-portal/components/gsql)
          * [Application Server (GUI)](https://docs.tigergraph.com/gui/4.2/admin-portal/components/gui)
          * [Kafka](https://docs.tigergraph.com/gui/4.2/admin-portal/components/kafka)
          * [Nginx](https://docs.tigergraph.com/gui/4.2/admin-portal/components/nginx)
          * [RESTPP](https://docs.tigergraph.com/gui/4.2/admin-portal/components/restpp)
          * [Change Data Capture (CDC)](https://docs.tigergraph.com/gui/4.2/admin-portal/components/cdc)
      * Security
        * [LDAP](https://docs.tigergraph.com/gui/4.2/admin-portal/security/ldap)
        * [Single Sign-on (SSO)](https://docs.tigergraph.com/gui/4.2/admin-portal/security/sso)
        * [Set up SSO with Azure Active Directory](https://docs.tigergraph.com/gui/4.2/admin-portal/security/sso-aad)
        * [SSO.OIDC via Okta](https://docs.tigergraph.com/gui/4.2/admin-portal/security/sso-oidc-okta)
        * [Multi-factor Authentication](https://docs.tigergraph.com/gui/4.2/admin-portal/security/mfa)
      * [Query Output File Download](https://docs.tigergraph.com/gui/4.2/admin-portal/gsql-output-file)
      * [Known Issues](https://docs.tigergraph.com/gui/4.2/admin-portal/known-issues)
    * [Legacy Version Documentation](https://docs.tigergraph.com/gui/4.2/intro/legacy-tg-versions)


GraphStudio and Admin Portal 4.2 Pre
[Fully-Managed: Savanna](https://docs.tigergraph.com/savanna/main/overview/)
[Self-Managed: TigerGraph DB](https://docs.tigergraph.com/tigergraph-server/4.2/intro/)
[Install](https://docs.tigergraph.com/tigergraph-server/current/getting-started/) [Manage](https://docs.tigergraph.com/tigergraph-server/current/system-management/)
Tutorials & Guides
[GSQL](https://github.com/tigergraph/ecosys/blob/master/tutorials/GSQL.md) [OpenCypher in GSQL](https://github.com/tigergraph/ecosys/blob/master/tutorials/Cypher.md) [Hybrid Vector Search](https://github.com/tigergraph/ecosys/blob/master/tutorials/VectorSearch.md)
Reference Manuals
[GSQL](https://docs.tigergraph.com/gsql-ref/4.2/intro/) [OpenCypher](https://docs.tigergraph.com/gsql-ref/current/opencypher-in-gsql/) [Vector](https://docs.tigergraph.com/gsql-ref/current/vector/) [REST APIs](https://docs.tigergraph.com/tigergraph-server/current/api/) [Configuration Parameters](https://docs.tigergraph.com/tigergraph-server/current/reference/configuration-parameters)
Visual Tools
[Develop: GraphStudio](https://docs.tigergraph.com/gui/4.2/intro/) [Administer: Admin Portal](https://docs.tigergraph.com/gui/4.2/intro/) [Visualize: Insights](https://docs.tigergraph.com/insights/4.2/intro/)
AI & Data Science
[Graph Algorithms](https://docs.tigergraph.com/graph-ml/3.10/intro/) [pyTigerGraph](https://docs.tigergraph.com/pytigergraph/1.8/intro/) [TigerGraphX](https://github.com/tigergraph/ecosys/blob/master/tutorials/TigerGraphX.md) [ML Workbench](https://docs.tigergraph.com/ml-workbench/1.4/intro/) [CoPilot](https://docs.tigergraph.com/tg-copilot/intro/)
  * [TigerGraph DB](https://docs.tigergraph.com/tigergraph-server/4.2/intro/)
    * [4.2 Pre](https://docs.tigergraph.com/tigergraph-server/4.2/intro/)
    * [4.1](https://docs.tigergraph.com/tigergraph-server/4.1/intro/)
    * [3.11](https://docs.tigergraph.com/tigergraph-server/3.11/intro/)
    * [3.10](https://docs.tigergraph.com/tigergraph-server/3.10/intro/)
    * [3.9](https://docs.tigergraph.com/tigergraph-server/3.9/intro/)
    * [3.6](https://docs.tigergraph.com/tigergraph-server/3.6/intro/)
  * [GSQL Language Reference](https://docs.tigergraph.com/gsql-ref/4.2/intro/)
    * [4.2 Pre](https://docs.tigergraph.com/gsql-ref/4.2/intro/)
    * [4.1](https://docs.tigergraph.com/gsql-ref/4.1/intro/)
    * [3.11](https://docs.tigergraph.com/gsql-ref/3.11/intro/)
    * [3.10](https://docs.tigergraph.com/gsql-ref/3.10/intro/)
    * [3.9](https://docs.tigergraph.com/gsql-ref/3.9/intro/)
    * [3.6](https://docs.tigergraph.com/gsql-ref/3.6/intro/intro)
  * [TigerGraph Savanna](https://docs.tigergraph.com/savanna/main/overview/)
  * [GraphStudio and Admin Portal](https://docs.tigergraph.com/gui/4.2/intro/)
    * [4.2 Pre](https://docs.tigergraph.com/gui/4.2/intro/)
    * [4.1](https://docs.tigergraph.com/gui/4.1/intro/)
    * [3.11](https://docs.tigergraph.com/gui/3.11/intro/)
    * [3.10](https://docs.tigergraph.com/gui/3.10/intro/)
    * [3.9](https://docs.tigergraph.com/gui/3.9/intro/)
    * [3.6](https://docs.tigergraph.com/gui/3.6/graphstudio/overview)
  * [Insights](https://docs.tigergraph.com/insights/4.2/intro/)
    * [4.2 Pre](https://docs.tigergraph.com/insights/4.2/intro/)
    * [4.1](https://docs.tigergraph.com/insights/4.1/intro/)
    * [3.11](https://docs.tigergraph.com/insights/3.11/intro/)
    * [3.10](https://docs.tigergraph.com/insights/3.10/intro/)
    * [3.9](https://docs.tigergraph.com/insights/3.9/intro/)
  * [Graph Data Science Library](https://docs.tigergraph.com/graph-ml/3.10/intro/)
    * [3.10](https://docs.tigergraph.com/graph-ml/3.10/intro/)
  * [pyTigerGraph](https://docs.tigergraph.com/pytigergraph/1.8/intro/)
    * [1.8](https://docs.tigergraph.com/pytigergraph/1.8/intro/)
    * [1.7](https://docs.tigergraph.com/pytigergraph/1.7/intro/)
    * [1.6](https://docs.tigergraph.com/pytigergraph/1.6/intro/)
  * [TigerGraph ML Workbench](https://docs.tigergraph.com/ml-workbench/1.4/intro/)
    * [1.4](https://docs.tigergraph.com/ml-workbench/1.4/intro/)
  * [TigerGraph GraphQL Service](https://docs.tigergraph.com/graphql/3.9/)
    * [3.9](https://docs.tigergraph.com/graphql/3.9/)
  * [TigerGraph CoPilot](https://docs.tigergraph.com/tg-copilot/intro/)
    * [main](https://docs.tigergraph.com/tg-copilot/intro/)
  * [TigerGraph Cloud Classic](https://docs.tigergraph.com/cloud/main/start/overview)


[](https://docs.tigergraph.com/home/)
  * [GraphStudio and Admin Portal 4.2 Pre](https://docs.tigergraph.com/gui/4.2/intro/)
  * GraphStudio
  * [Explore Graph](https://docs.tigergraph.com/gui/4.2/graphstudio/explore-graph/README)
  * [Graph Exploration Panel](https://docs.tigergraph.com/gui/4.2/graphstudio/explore-graph/graph-exploration-panel)


[Edit this Page](https://github.com/tigergraph/gui-docs/edit/4.2/modules/graphstudio/pages/explore-graph/graph-exploration-panel.adoc)
### Contents
  * [Customize visualization](https://docs.tigergraph.com/gui/4.2/graphstudio/explore-graph/graph-exploration-panel#_customize_visualization)
  * [Zoom in/out](https://docs.tigergraph.com/gui/4.2/graphstudio/explore-graph/graph-exploration-panel#_zoom_inout)
  * [Refresh result](https://docs.tigergraph.com/gui/4.2/graphstudio/explore-graph/graph-exploration-panel#_refresh_result)
  * [Change layout](https://docs.tigergraph.com/gui/4.2/graphstudio/explore-graph/graph-exploration-panel#_change_layout)
  * [Export result](https://docs.tigergraph.com/gui/4.2/graphstudio/explore-graph/graph-exploration-panel#_export_result)
  * [Locate vertex](https://docs.tigergraph.com/gui/4.2/graphstudio/explore-graph/graph-exploration-panel#_locate_vertex)
  * [Show selected vertices and edges](https://docs.tigergraph.com/gui/4.2/graphstudio/explore-graph/graph-exploration-panel#_show_selected_vertices_and_edges)
  * [Hide vertices and edges](https://docs.tigergraph.com/gui/4.2/graphstudio/explore-graph/graph-exploration-panel#_hide_vertices_and_edges)
  * [Undo and redo](https://docs.tigergraph.com/gui/4.2/graphstudio/explore-graph/graph-exploration-panel#_undo_and_redo)
  * [Save and open graph exploration result](https://docs.tigergraph.com/gui/4.2/graphstudio/explore-graph/graph-exploration-panel#_save_and_open_graph_exploration_result)
  * [Save screenshot](https://docs.tigergraph.com/gui/4.2/graphstudio/explore-graph/graph-exploration-panel#_save_screenshot)
  * [Change settings](https://docs.tigergraph.com/gui/4.2/graphstudio/explore-graph/graph-exploration-panel#_change_settings)
  * [Edit graph](https://docs.tigergraph.com/gui/4.2/graphstudio/explore-graph/graph-exploration-panel#_edit_graph)
  * [Add new vertex](https://docs.tigergraph.com/gui/4.2/graphstudio/explore-graph/graph-exploration-panel#_add_new_vertex)
  * [Add new edge](https://docs.tigergraph.com/gui/4.2/graphstudio/explore-graph/graph-exploration-panel#_add_new_edge)
  * [Edit attributes](https://docs.tigergraph.com/gui/4.2/graphstudio/explore-graph/graph-exploration-panel#_edit_attributes)
  * [Copy attributes](https://docs.tigergraph.com/gui/4.2/graphstudio/explore-graph/graph-exploration-panel#_copy_attributes)
  * [Delete vertices and edges](https://docs.tigergraph.com/gui/4.2/graphstudio/explore-graph/graph-exploration-panel#_delete_vertices_and_edges)


# Graph Exploration Panel
### Contents
  * [Customize visualization](https://docs.tigergraph.com/gui/4.2/graphstudio/explore-graph/graph-exploration-panel#_customize_visualization)
  * [Zoom in/out](https://docs.tigergraph.com/gui/4.2/graphstudio/explore-graph/graph-exploration-panel#_zoom_inout)
  * [Refresh result](https://docs.tigergraph.com/gui/4.2/graphstudio/explore-graph/graph-exploration-panel#_refresh_result)
  * [Change layout](https://docs.tigergraph.com/gui/4.2/graphstudio/explore-graph/graph-exploration-panel#_change_layout)
  * [Export result](https://docs.tigergraph.com/gui/4.2/graphstudio/explore-graph/graph-exploration-panel#_export_result)
  * [Locate vertex](https://docs.tigergraph.com/gui/4.2/graphstudio/explore-graph/graph-exploration-panel#_locate_vertex)
  * [Show selected vertices and edges](https://docs.tigergraph.com/gui/4.2/graphstudio/explore-graph/graph-exploration-panel#_show_selected_vertices_and_edges)
  * [Hide vertices and edges](https://docs.tigergraph.com/gui/4.2/graphstudio/explore-graph/graph-exploration-panel#_hide_vertices_and_edges)
  * [Undo and redo](https://docs.tigergraph.com/gui/4.2/graphstudio/explore-graph/graph-exploration-panel#_undo_and_redo)
  * [Save and open graph exploration result](https://docs.tigergraph.com/gui/4.2/graphstudio/explore-graph/graph-exploration-panel#_save_and_open_graph_exploration_result)
  * [Save screenshot](https://docs.tigergraph.com/gui/4.2/graphstudio/explore-graph/graph-exploration-panel#_save_screenshot)
  * [Change settings](https://docs.tigergraph.com/gui/4.2/graphstudio/explore-graph/graph-exploration-panel#_change_settings)
  * [Edit graph](https://docs.tigergraph.com/gui/4.2/graphstudio/explore-graph/graph-exploration-panel#_edit_graph)
  * [Add new vertex](https://docs.tigergraph.com/gui/4.2/graphstudio/explore-graph/graph-exploration-panel#_add_new_vertex)
  * [Add new edge](https://docs.tigergraph.com/gui/4.2/graphstudio/explore-graph/graph-exploration-panel#_add_new_edge)
  * [Edit attributes](https://docs.tigergraph.com/gui/4.2/graphstudio/explore-graph/graph-exploration-panel#_edit_attributes)
  * [Copy attributes](https://docs.tigergraph.com/gui/4.2/graphstudio/explore-graph/graph-exploration-panel#_copy_attributes)
  * [Delete vertices and edges](https://docs.tigergraph.com/gui/4.2/graphstudio/explore-graph/graph-exploration-panel#_delete_vertices_and_edges)


The Graph Exploration panel displays the result of your Graph Exploration actions. After you have a subgraph displayed in the Graph Exploration Panel, you can use the buttons in the Explorer View Menu or the options in the bottom right corner to customize the display. Additionally, you can make modifications to the graph database itself in edit mode.
![Explorer View Menu](https://docs.tigergraph.com/gui/4.2/graphstudio/_images/explore-view-menu.png)
![Options in the bottom right corner](https://docs.tigergraph.com/gui/4.2/graphstudio/_images/ex-panel-options.png)
## [](https://docs.tigergraph.com/gui/4.2/graphstudio/explore-graph/graph-exploration-panel#_customize_visualization)Customize visualization
The Graph Exploration panel provides you with multiple ways of customizing the visualization of your graph exploration results.
### [](https://docs.tigergraph.com/gui/4.2/graphstudio/explore-graph/graph-exploration-panel#_zoom_inout)Zoom in/out
Although you can use a mouse scroller to zoom in and zoom out the graph exploration result, you can also use the two buttons in the bottom-right corner to do that: ![zoom button](https://docs.tigergraph.com/gui/4.2/graphstudio/_images/zoom-button.png)
### [](https://docs.tigergraph.com/gui/4.2/graphstudio/explore-graph/graph-exploration-panel#_refresh_result)Refresh result
The graph exploration result only reflects a snapshot of the graph data. If the data is changed due to CRUD operations (maybe in another session), the snapshot is outdated.
You can click the refresh button ![refresh button](https://docs.tigergraph.com/gui/4.2/graphstudio/_images/refresh-button.png) to get all vertices and edges synced with the graph database. All vertices and edges that already got removed will be removed from the exploration panel, and all the attribute values will also get updated.
### [](https://docs.tigergraph.com/gui/4.2/graphstudio/explore-graph/graph-exploration-panel#_change_layout)Change layout
Click the change layout button ![layout button](https://docs.tigergraph.com/gui/4.2/graphstudio/_images/layout-button.png) in the bottom right of the canvas to change layout:
![Change layout](https://docs.tigergraph.com/gui/4.2/graphstudio/_images/change-layout-ex.png)
### [](https://docs.tigergraph.com/gui/4.2/graphstudio/explore-graph/graph-exploration-panel#_export_result)Export result
You can export the current visualization result as a png file or a zip file containing csv files by clicking ![export btn](https://docs.tigergraph.com/gui/4.2/graphstudio/_images/export-btn.png). When you click the button, a drop-down menu will appear, as shown below:
![download dropdown](https://docs.tigergraph.com/gui/4.2/graphstudio/_images/download-dropdown.png)
You can select different export types by clicking on different items. When you choose to Export PNG, your browser will automatically download a picture named `export.png`. Below is an example of an exported .png file.
![export](https://docs.tigergraph.com/gui/4.2/graphstudio/_images/export.png)
You can also choose the Export CSV option, and your browser will download a zip file named `[GraphName]_export_vertices_and_edges.zip`. The zip file contains .csv files that describe the exploration result. Each file corresponds to a vertex or edge type:
![export csv ex](https://docs.tigergraph.com/gui/4.2/graphstudio/_images/export-csv-ex.png)
The CSV file for each vertex type contains Vertex ID and Vertex Type, in addition to the attributes of each vertex. Below is an example:
![vertex csv](https://docs.tigergraph.com/gui/4.2/graphstudio/_images/vertex-csv.png)
For edge types, the CSV file contains Edge Type, Source Vertex ID, Source Vertex Type, Target Vertex ID, Target Vertex Type and any edge attributes. Below is an example:
![edge table ex](https://docs.tigergraph.com/gui/4.2/graphstudio/_images/edge-table-ex.png)
If a user does not have the **APP_ACCESS_DATA** privilege, **Export PNG** and **Export CSV** buttons will be disabled.  
---  
### [](https://docs.tigergraph.com/gui/4.2/graphstudio/explore-graph/graph-exploration-panel#_locate_vertex)Locate vertex
The Locate Vertex In Result feature ![locate vertex btn](https://docs.tigergraph.com/gui/4.2/graphstudio/_images/locate_vertex_btn.png) searches for and then zooms in on vertices that match the given value for ID and/or attribute. For example, if you type "Mary" in Locate Vertices in Result popup window, and have both of the checkboxes selected, then this feature will look for any vertices where "Mary" is an exact match for either the ID or any of the attribute values. Those vertices will be selected (and all other objects will be unselected). The display will zoom in to focus on the selected objects.
![locate vertex in result](https://docs.tigergraph.com/gui/4.2/graphstudio/_images/locate_vertex_in_result.png)
The vertices with the matching ID or attributes will be selected:
![locate vertex result](https://docs.tigergraph.com/gui/4.2/graphstudio/_images/locate_vertex_result.png)
### [](https://docs.tigergraph.com/gui/4.2/graphstudio/explore-graph/graph-exploration-panel#_show_selected_vertices_and_edges)Show selected vertices and edges
Click the Show Selections button ![show ve btn](https://docs.tigergraph.com/gui/4.2/graphstudio/_images/show_ve_btn.png) to hide all the vertices and edges which are not currently selected. However, if the two endpoints of an edge are selected, the edge will be selected as well. Also, if nothing is selected, nothing will be hidden.
### [](https://docs.tigergraph.com/gui/4.2/graphstudio/explore-graph/graph-exploration-panel#_hide_vertices_and_edges)Hide vertices and edges
Click the Hide button ![hide ve btn](https://docs.tigergraph.com/gui/4.2/graphstudio/_images/hide_ve_btn.png) to hide the currently selected vertices and edges. If nothing is selected, all vertices and edges in the Graph Exploration Panel will be hidden.
### [](https://docs.tigergraph.com/gui/4.2/graphstudio/explore-graph/graph-exploration-panel#_undo_and_redo)Undo and redo
The Explore Graph page records the whole history of the current session’s changes to the visualization result set. Click the Undo and the Redo buttons ![redo undo btn](https://docs.tigergraph.com/gui/4.2/graphstudio/_images/redo_undo_btn.png) to go back or forward in the history.
Database changes (adding or deleting vertices/edges, editing attributes) cannot be undone with the Undo feature. Also, Undo/Redo do not include layout and display changes (e.g., positioning of objects and display of attributes).  
---  
### [](https://docs.tigergraph.com/gui/4.2/graphstudio/explore-graph/graph-exploration-panel#_save_and_open_graph_exploration_result)Save and open graph exploration result
When you find something interesting during exploration and want to save the result as a picture, you can click the Save Exploration button ![save btn](https://docs.tigergraph.com/gui/4.2/graphstudio/_images/save_btn.png) . In the popup window, you can give the result a file name and an optional description, then click Save:
![save exploration result](https://docs.tigergraph.com/gui/4.2/graphstudio/_images/save_exploration_result.png)
In the future, you can open a previously saved exploration result by clicking the Open Exploration History button ![open exploration result](https://docs.tigergraph.com/gui/4.2/graphstudio/_images/open_exploration_result.png) and choose one result from the list:
![exploration history](https://docs.tigergraph.com/gui/4.2/graphstudio/_images/exploration_history.png)
### [](https://docs.tigergraph.com/gui/4.2/graphstudio/explore-graph/graph-exploration-panel#_save_screenshot)Save screenshot
When you find something interesting during exploration and want to save the result as a picture, you can click the Save Screenshot button ![screenshot btn](https://docs.tigergraph.com/gui/4.2/graphstudio/_images/screenshot_btn.png) . The exploration result will be saved as a PNG picture to your local file system.
### [](https://docs.tigergraph.com/gui/4.2/graphstudio/explore-graph/graph-exploration-panel#_change_settings)Change settings
To change graph exploration settings by clicking Settings button ![settings btn](https://docs.tigergraph.com/gui/4.2/graphstudio/_images/settings_btn.png) . Currently, you can select what attributes to show for each vertex type and edge type, and set whether to show an object’s detailed information in a popup tooltip when the cursor hovers over it. Click Apply and the new settings will take effect.
![settings](https://docs.tigergraph.com/gui/4.2/graphstudio/_images/settings.png)
In the example below, the ID and gender for person vertices are shown. The ID and the foundYear attributes for company vertices are shown.
![show attributes](https://docs.tigergraph.com/gui/4.2/graphstudio/_images/show-attributes.png)
You can set the number format you want to display through settings. This setting allows you to define the thousandth place and its separator, the number of decimal places and its separator. Every time you modify the settings, a sample at the top will show your modifications in real time.
![number formatting settings](https://docs.tigergraph.com/gui/4.2/graphstudio/_images/number-formatting-settings.png)
![number formatting ex](https://docs.tigergraph.com/gui/4.2/graphstudio/_images/number-formatting-ex.png)
You can also configure the text font size of vertex and edge labels and properties.
![configure font size](https://docs.tigergraph.com/gui/4.2/graphstudio/_images/configure-font-size.png)
Other than the above, you can also configure vertex and edge size and color to augment the visualization in settings. See [Augment Visualization Result](https://docs.tigergraph.com/gui/4.2/graphstudio/explore-graph/augment-visualization-result).
## [](https://docs.tigergraph.com/gui/4.2/graphstudio/explore-graph/graph-exploration-panel#_edit_graph)Edit graph
Beside customizing the view of your graph exploration results, you can also enable the edit mode and make edits to the graph itself by adding or removing vertices and edges, as well as changing their attributes.
In order to perform any of the actions in this section, you need to enable edit mode by clicking on the toggle next to Edit mode. Once you are in the edit mode, the four buttons that allow you to edit the graph will appear on the right.
![Explorer View Menu](https://docs.tigergraph.com/gui/4.2/graphstudio/_images/explore-view-menu.png)
### [](https://docs.tigergraph.com/gui/4.2/graphstudio/explore-graph/graph-exploration-panel#_add_new_vertex)Add new vertex
In edit mode, click the Add New Vertex button ![add vertex type](https://docs.tigergraph.com/gui/4.2/graphstudio/_images/add_vertex_type.png) to add a new vertex to the graph database. The Add New Vertex window will pop up. Choose a vertex type and then fill in values for the ID and the attributes. Click ADD and the vertex will be inserted into the TigerGraph database. It will also be shown in the Graph Exploration Panel.
![add new vertex](https://docs.tigergraph.com/gui/4.2/graphstudio/_images/add_new_vertex.png)
If you provide a vertex ID that is already used, GraphStudio will ask you whether you want to overwrite the existing vertex. If you say no, then it will not add or update anything.  
---  
### [](https://docs.tigergraph.com/gui/4.2/graphstudio/explore-graph/graph-exploration-panel#_add_new_edge)Add new edge
In edit mode, click the Add New Edge button ![add edge type](https://docs.tigergraph.com/gui/4.2/graphstudio/_images/add_edge_type.png) to add a new edge to the graph database. Next, click the source vertex of the edge in the Graph Exploration Panel, and then click the target vertex of the edge. Then the Add New Edge panel will pop up. Choose the edge type from the dropdown menu. Only types that match the two vertices you selected are shown. (It is possible that there are no eligible edge types). Fill in values for attributes and click ADD. Your new edge will be inserted into the TigerGraph database. It will also be shown in the Graph Exploration Panel.
![add new edge](https://docs.tigergraph.com/gui/4.2/graphstudio/_images/add_new_edge.png)
If you select an edge type that already exists between the two vertices, GraphStudio will ask if you want to overwrite the existing edge. If you say no, nothing will be added or updated. The current TigerGraph system does not support having multiple edges of the same type between two specific vertices.  
---  
### [](https://docs.tigergraph.com/gui/4.2/graphstudio/explore-graph/graph-exploration-panel#_edit_attributes)Edit attributes
To edit the attributes of one vertex or edge, select one object and then click the Edit Attributes button ![edit](https://docs.tigergraph.com/gui/4.2/graphstudio/_images/edit.png) in edit mode. The edit attributes panel will pop up.
![edit attributes](https://docs.tigergraph.com/gui/4.2/graphstudio/_images/edit-attributes.png)
When you finish editing, click the Update button to apply the change.
### [](https://docs.tigergraph.com/gui/4.2/graphstudio/explore-graph/graph-exploration-panel#_copy_attributes)Copy attributes
In the **Edit Attributes** window, click **COPY** to copy the attributes of a vertex or edge. The attributes are copied to clipboard in JSON format.
### [](https://docs.tigergraph.com/gui/4.2/graphstudio/explore-graph/graph-exploration-panel#_delete_vertices_and_edges)Delete vertices and edges
To delete vertices or edges, select the objects you want to delete, and click the Delete Selected Elements button ![delete forever](https://docs.tigergraph.com/gui/4.2/graphstudio/_images/delete_forever.png) in edit mode.
"Delete" permanently removes data from the graph database. Deleted vertices and edges cannot be restored with Undo. To restore them, you must manually add them back. If you delete a vertex, all of its outgoing and incoming edges will also be deleted  
---  
3 Twin Dolphin Drive, Ste 225 Redwood City, CA 94065 
Copyright © 2025 TigerGraph
  * ## Resources
    * [Support](https://www.tigergraph.com/support/)
    * [Community](https://community.tigergraph.com/)
    * [Developer Site](https://dev.tigergraph.com/)
    * [Test Drive](https://testdrive.tigergraph.com/)
  * ## Social
    * [Linkedin](https://www.linkedin.com/company/tigergraph/)
    * [Facebook](https://www.facebook.com/TigerGraphDB/)
    * [Twitter](https://twitter.com/tigergraphdb)
  * ## Legal
    * [Privacy Policy](https://www.tigergraph.com/privacy-policy/)
    * [Terms of Use](https://www.tigergraph.com/terms/)
    * [Sitemap](https://docs.tigergraph.com/sitemap.xml)


